# stm_smk_tst

./: .mxproject  CMakeLists.txt  Makefile  arm-gcc-toolchain.cmake  buil.bat  buil.sh  build.bat  clean.bat  dump.sh  eclipse_debug_note.txt  iar-toolchain.cmake  lib.cmake  make.bat  make_iar.bat  ozone_debug.jdebug  startup_stm32f103xe.s  test_gnu.ioc
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_gpio_ex.h
Src/: main.c  stm32f1xx_hal_msp.c
Src/newlib/: assert.c
cmake/: CMakeLists.txt  arm-gcc-toolchain.cmake  buil.bat
eclipse_launch/: OCD.launch  ref103prj Debug.launch  stm32_prj-Debug_build Configuration.launch
openOCDcnfg/: lv.sh  openocd.cfg
